# Waves

./: .env  .gitignore  Makefile  README.md  Sandbox.py  Waves.sln  main.py  misc.py  pyproject.toml  waves.py  waves.spec
Waves/: README.txt  Waves.py  Waves.pyproj  scr_compileForms.py
Waves/forms/: main_window.ui  main_window_ui.py  resource.qrc  resource_rc.py  style.css
Waves/gui/: main_window.py
forms/: main_window.ui  main_window_ui.py  score_editor.ui  score_editor_ui.py
gui/: configuration.py  main_window.py  score_editor.py
music/: event.py  key.py  musicxml.py  note.py  part.py  pitch.py  score.py
old/forms/: main_window.ui  main_window_ui.py  resource_rc.py  score_editor_ui.py
old/gui/: configuration.py  main_window.py  score_editor.py
waves/: misc.py  utils.py
waves/gui/: score_editor.py  scoreeditor.kv  waves.kv  waves_app.py
waves/music/: event.py  key.py  musicxml.py  note.py  part.py  pitch.py  score.py
